// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkVisuallyHidden should render correctly 1`] = `
<DocumentFragment>
  <span
    class="bpk-visually-hidden"
  >
    Content
  </span>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="div" 1`] = `
<DocumentFragment>
  <div
    class="bpk-visually-hidden"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="h1" 1`] = `
<DocumentFragment>
  <h1
    class="bpk-visually-hidden"
  >
    Content
  </h1>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="h2" 1`] = `
<DocumentFragment>
  <h2
    class="bpk-visually-hidden"
  >
    Content
  </h2>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="h3" 1`] = `
<DocumentFragment>
  <h3
    class="bpk-visually-hidden"
  >
    Content
  </h3>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="h4" 1`] = `
<DocumentFragment>
  <h4
    class="bpk-visually-hidden"
  >
    Content
  </h4>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="h5" 1`] = `
<DocumentFragment>
  <h5
    class="bpk-visually-hidden"
  >
    Content
  </h5>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="h6" 1`] = `
<DocumentFragment>
  <h6
    class="bpk-visually-hidden"
  >
    Content
  </h6>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="p" 1`] = `
<DocumentFragment>
  <p
    class="bpk-visually-hidden"
  >
    Content
  </p>
</DocumentFragment>
`;

exports[`BpkVisuallyHidden should render correctly with as="span" 1`] = `
<DocumentFragment>
  <span
    class="bpk-visually-hidden"
  >
    Content
  </span>
</DocumentFragment>
`;
